--- a/app/views/inventory_entries/index.pdf.erb
+++ b/app/views/inventory_entries/index.pdf.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset='utf-8'/>
-  <%= stylesheet_link_tag "https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" %>
+  <%= stylesheet_link_tag "http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" %>
   <style type="text/css">
     div   { font-size: 10px }
     table { page-break-inside:auto }
