--- a/app/views/journals/show.pdf.erb
+++ b/app/views/journals/show.pdf.erb
@@ -3,7 +3,7 @@
 <head>
   <meta charset='utf-8'/>
 
-  <%= stylesheet_link_tag "https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" %>
+  <%= stylesheet_link_tag "http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" %>
 
   <style type="text/css">
     div {
