--- a/app/views/reports/all_finance.csv.erb
+++ b/app/views/reports/all_finance.csv.erb
@@ -19,6 +19,7 @@
 
     finance_hash = @all_finance_hashes[unit.id]
     bank_hash = @all_bank_hashes[unit.id]
+    total_hash = @total_hashes[unit.id]
 
     journal_types = [finance_hash, bank_hash]
     journal_types.each_with_index do |hash, index|
@@ -35,12 +36,13 @@
       row += "\t" + number_with_precision(hash[@total_balance_income_key], :precision => 2)
 
       @categories.where(:is_expense => true).each do |category|
-      row += "\t" + number_with_precision(hash[category.id], :precision => 2)
+        row += "\t" + number_with_precision(hash[category.id], :precision => 2)
       end
 
       row += "\t" + number_with_precision(hash[@total_balance_expense_key], :precision => 2)
 
-      row += "\t" + number_with_precision(@total_hash[:finance_sum], :precision => 2)
+      total_sum = (index == 0) ? total_hash[:finance_sum] : total_hash[:bank_sum]
+      row += "\t" + number_with_precision(total_sum, :precision => 2)
 
       concat row + "\n"
     end
