Ujednolicenie kolorów przycisków do drukowania / eksportu

--- a/app/views/inventory_entries/index.html.erb
+++ b/app/views/inventory_entries/index.html.erb
@@ -11,8 +11,8 @@
           <span class="glyphicon glyphicon-minus"></span>&nbsp;&nbsp;Nowy rozchód
         <% end %>
       <% end %>
-      <%= link_to "<span class='glyphicon glyphicon-print'></span>&nbsp;&nbsp;Drukuj rok".html_safe, @pdf_inventory_link, class: 'btn btn-sm btn-default' %>
-      <%= link_to "<span class='glyphicon glyphicon-print'></span>&nbsp;&nbsp;Drukuj wszystko".html_safe, @pdf_all_inventory_link, class: 'btn btn-sm btn-default' %>
+      <%= link_to "<span class='glyphicon glyphicon-print'></span>&nbsp;&nbsp;Drukuj rok".html_safe, @pdf_inventory_link, class: 'btn btn-sm btn-primary' %>
+      <%= link_to "<span class='glyphicon glyphicon-print'></span>&nbsp;&nbsp;Drukuj wszystko".html_safe, @pdf_all_inventory_link, class: 'btn btn-sm btn-primary' %>
     </small>
   </div>
   <div class="col-md-6">
