Aktualizacja gema twitter-bootstrap-rails do wersji 4

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -7,6 +7,9 @@
 @glyphiconsTtfPath: font-url("glyphicons-halflings-regular.ttf");
 @glyphiconsSvgPath: font-url("glyphicons-halflings-regular.svg#glyphicons_halflingsregular");
 
+// Set path for icons
+@icon-font-path: "/assets";
+
 // Glyphicons
 @import "twitter/bootstrap/glyphicons.less";
 
