Eksport szczegółowego raportu finansowego do CSV #179

--- a/app/views/journals/show.csv.erb
+++ b/app/views/journals/show.csv.erb
@@ -6,7 +6,7 @@
     header += "\t#{category.name}"
   end
 
-  header += "\tWypływy razem\tWydatki razem\tWydatki razem 1%"
+  header += "\tWpływy razem\tWydatki razem\tWydatki razem 1%"
 
   @categories_expense.each do |category|
     header += "\t#{category.name}\t#{category.name} 1%"
