--- a/app/views/reports/all_finance.html.erb
+++ b/app/views/reports/all_finance.html.erb
@@ -24,6 +24,7 @@
     <div class="pull-right top-buffer-20">
       <%= link_to '<span class="glyphicon glyphicon-print"></span>&nbsp;&nbsp;Drukuj'.html_safe, @pdf_report_link, class: 'btn btn-sm btn-primary' %>
       <%= link_to '<span class="glyphicon glyphicon-list"></span>&nbsp;&nbsp;Eksport do CSV'.html_safe, @csv_report_link, class: 'btn btn-sm btn-primary' %>
+      <%= link_to '<span class="glyphicon glyphicon-list"></span>&nbsp;&nbsp;Eksport szczegółowy do CSV'.html_safe, @csv_entries_report_link, class: 'btn btn-sm btn-primary' %>
     </div>
   </div>
 </div>
