--- a/app/views/shared/_journal_select.html.erb
+++ b/app/views/shared/_journal_select.html.erb
@@ -9,15 +9,15 @@
   </script>
 
   <!--<div class="input-group">-->
-    <div class="col-md-10">
+    <div class="col-md-9">
       <select onchange="selectedUnitChanged(this.value)" style="padding: 0; width:100%;">
         <% @user_units.each do |unit| %>
           <option value="<%= unit.id %>" <%= unit.id == session[:current_unit_id] ? "selected='selected'" : "" %>><%= unit.full_name %></option>
         <% end %>
       </select>
     </div>
-    <div class="col-md-2">
-      <select onchange="selectedYearChanged(this.value)" style="padding: 0; width:100%;">
+    <div class="col-md-2 pull-left">
+      <select onchange="selectedYearChanged(this.value)" style="padding: 0; width:120%;">
         <% @years.each do |year| %>
           <option value="<%= year %>" <%= year == session[:current_year] ? "selected='selected'" : "" %>><%= year %></option>
         <% end %>
