--- a/app/views/upload_csv/upload.html.erb
+++ b/app/views/upload_csv/upload.html.erb
@@ -50,7 +50,7 @@
         <th colspan="<%= @docno_index + 1 %>" class="text-center"><small><%=t 'helpers.label.journal.details'%></small></th>
         <th colspan="<%= @incomes_categories.length()%>" class="text-center"><small><%=t 'helpers.label.journal.income_detailed'%></small></th>
         <th colspan="<%= 3 %>" class="text-center"><small><%=t 'helpers.label.journal.income_expense_all'%></small></th>
-        <th colspan="<%= @rowarraydisp.length() - @expenses_sum_index - 2 %>" class="text-center"><small><%=t 'helpers.label.journal.expense_detailed'%></small></th>
+        <th colspan="<%= @expenses_categories.length() %>" class="text-center"><small><%=t 'helpers.label.journal.expense_detailed'%></small></th>
       </tr>
 
       <tr>
