--- a/app/views/upload_csv/_form.html.erb
+++ b/app/views/upload_csv/_form.html.erb
@@ -1,40 +1,115 @@
-Wymagania pliku:
-Data, Opis, Numer dokumentu, Wpływ1, Wpływ2.., 1%, Wpływy razem, Wydatki razem, Wydatki 1%, Wydatek1, Wydatek1_1%, Wydatek2, Wydatek2_1%..
-
 <script>
    function changeJournalColValue(val){
      document.getElementById('journal_col_index').value=val;
     }
 </script>
 
+<script type='text/javascript'>
+    $(document).ready(function () {
+        $('#advancedOptions').hide();
+        $('.advanced').click(function() {
+            if ($('#advancedOptions').is(':hidden')) {
+                 $('#advancedOptions').slideDown();
+            } else {
+                 $('#advancedOptions').slideUp();
+            }
+        });
+    });
+    $(document).ready(function () {
+        $('#fileRequirements').hide();
+        $('.requirements').click(function() {
+            if ($('#fileRequirements').is(':hidden')) {
+                 $('#fileRequirements').slideDown();
+            } else {
+                 $('#fileRequirements').slideUp();
+            }
+        });
+    });
+</script>
+
+<h1 class=""> 
+  <strong>
+    <%= Unit.find(session[:current_unit_id]).full_name %>
+  </strong>
+  - <%= JournalType.find(params[:journaltype_id]) %>
+</h1>
+<h4>
+Importowanie z pliku .csv
+</h4> 
+<br>
+
 <%= form_for :upload_csv, url: "/upload_csv/upload" do |form| %>
-  <%= form.file_field :file %>
-  Czy plik .csv zawiera książki wielu drużyn?
-  <br>
-  <%= form.radio_button :journals_multi, false, { checked: true, onclick: "changeJournalColValue(-1)"  } %> Jedna drużyna<br />
-  <%= form.radio_button :journals_multi, true, {onclick: "changeJournalColValue(3)"} %> Wiele drużyn<br />
-  <br>
-  <select id="unit_id" name="unit_id">
-    <% Unit.find_by_user(current_user).each do |unit| %>
-      <option value="<%= unit.id %>" <%= unit.id == session[:current_unit_id] ? "selected='selected'" : "" %>><%= unit.full_name %></option>
-    <% end %>
-  </select>
+  <div class="form-group">
+    <label for="file">Plik .csv</label>
+    <%= form.file_field :file %>
+    <br>
+    <a href='#requirements' class='requirements'>Wymagania pliku</a>
+    
+    <div id='fileRequirements'>
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th scope="col">Data</th>
+            <th scope="col">Opis</th>
+            <th scope="col">Numer dokumentu</th>
+            <th scope="col">Wpływ_1</th>
+            <th scope="col">Wpływ_n</th>
+            <th scope="col">1%</th>
+            <th scope="col">Wpływy razem</th>
+            <th scope="col">Wydatki razem</th>
+            <th scope="col">Wydatki 1%</th>
+            <th scope="col">Wydatek_1</th>
+            <th scope="col">Wydatek_1_1%</th>
+            <th scope="col">Wydatek_n</th>
+            <th scope="col">Wydatek_n_1%</th>
+          </tr>
+        </thead>
+      </table>
+    </div>
+    
+  </div>
+  <div class="form-group" style="display:none;">
+    <label for="journals_multi">Czy plik .csv zawiera książki wielu drużyn?</label>
+    <br>
+    <%= form.radio_button :journals_multi, false, { checked: true, onclick: "changeJournalColValue(-1)"  } %> Jedna drużyna<br />
+    <%= form.radio_button :journals_multi, true, { onclick: "changeJournalColValue(3)" } %> Wiele drużyn<br />
+  </div>
 
-  <select id="journaltype_id" name="journaltype_id">
-    <% JournalType.all().each do |journal_type| %>
-      <option value="<%= journal_type.id %>"><%= journal_type.to_s %></option>
-    <% end %>
-  </select>
+  <div class="form-group" style="display:none;">
+    <select id="unit_id" name="unit_id">
+      <% Unit.find_by_user(current_user).each do |unit| %>
+        <option value="<%= unit.id %>" <%= unit.id == session[:current_unit_id] ? "selected='selected'" : "" %>><%= unit.full_name %></option>
+      <% end %>
+    </select>
+  </div>
 
-  <br>
-  Separator
-  <%= form.select :separator, [["tab", "\t"], [",", ","], [";", ";"]] %>
-  <br>
-  Kolumna zawierająca numer książki (Jeżeli brak, to wpisz -1)
-  <%= text_field_tag 'journal_col_index', -1  %>
-  <%= hidden_field_tag 'date_format', "%Y-%m-%d"  %>
-  <br/>
-  <%= form.submit "Check" %>
-  <%= form.submit "Upload" %>
+  <div class="form-group" style="display:none;">
+    <label for="journaltype_id">Wybierz typ książki</label>
+    <br>
+    <%= text_field_tag 'journaltype_id', params[:journaltype_id] %>
+  </div>
+
+  <div class="form-group">
+    <a href='#advanced' class='advanced'>Zaawansowane opcje</a>
+    <div id='advancedOptions'>
+      <h4 style="color:red;"><strong>
+      Prawdopodobnie nie powinieneś tu niczego zmieniać!<br>Import pliku jest przystosowany dla domyślnego eksportowanego pliku.
+      </strong></h4>
+      
+      <label for="separator">Separator</label>
+      <%= form.select :separator, [["tab", "\t"], [",", ","], [";", ";"]] %>
+      <br>
+      <label for="journal_col_index">Kolumna zawierająca numer książki (Jeżeli brak, to wpisz -1)</label>
+      <%= text_field_tag 'journal_col_index', -1  %>
+      <br>
+      <label for="date_format">Format daty</label>
+      <%= text_field_tag 'date_format', "%Y-%m-%d"  %>
+    </div>
+  </div>
+  
+  <div class="form-group">
+    <%= form.button 'Weryfikacja pliku', value: 'Check', class: 'button', :name => 'commit', :type => "submit" %>
+    <%= form.button 'Dodanie danych z pliku', value: 'Upload', class: 'button', :name => 'commit', :type => "submit" %>
+  </div>
 <% end  %>
 
