--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,3 +1,12 @@
+<div class="row top-buffer-40">
+  <div class="col-md-6">
+  </div>
+
+  <div class="col-md-6">
+    <%= render "shared/journal_select_disabled" %>
+  </div>
+</div>
+
 <% if @entry.is_expense %>
 <h1>Nowy wydatek</h1>
 <% else %>
