--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,9 @@
 <h1>Edycja użytkownika</h1>
 
+<div class="alert alert-warning" role="alert">
+  Adres email powinien pochodzić z domeny <b>@zhr.pl</b> lub jej poddomen (np. <b>@malopolska.zhr.pl</b>)
+</div>
+
 <%= render 'form' %>
 
 <%= link_to 'Anuluj', @user %> |
