--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Nowy użytkownik</h1>
 
 <div class="alert alert-warning" role="alert">
-  Każdy nowy użytkownik musi posiadać adres w domenie <b>zhr.pl</b> lub jej poddomenach (np. <b>malopolska.zhr.pl</b>)
+  Każdy nowy użytkownik powinien posiadać adres w domenie <b>@zhr.pl</b> lub jej poddomenach (np. <b>@malopolska.zhr.pl</b>)
 </div>
 
 <%= render 'form' %>
